--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,11 @@ jobs:
       - run:
           name: zip source
           command: |
-            zip -r ./data/kaggle/src.zip ./ -x "data/*" "logs/*" "multirun/*" ".git/*" ".ipynb_checkpoints/*" ".vscode/*" "notebook/*"
+            zip -r ./data/kaggle/src/src.zip ./ -x "data/*" "logs/*" "multirun/*" ".git/*" ".ipynb_checkpoints/*" ".vscode/*" "notebook/*"
       - run:
           name: upload to kaggle dataset
           command: |
-            kaggle datasets version -p ./data/kaggle/ -m "update" -d
+            kaggle datasets version -p ./data/kaggle/src/ -m "update" -d
 workflows:
   version: 2
   kaggle:
