--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -4,10 +4,11 @@ pretrainedmodels>=0.7.4
 jupyterlab==2.2.9
 hydra-core>=1.0.6
 timm>=0.4.5
-pytorch-lightning>=1.3.0
+pytorch-lightning==1.3.0
 torch-optimizer>=0.1.0
 resnest>=0.0.5
 torchlibrosa>=0.0.9
 audiomentations>=0.16.0
 colorednoise>=1.1.1
 pandarallel>=1.5.2
+transformers>=4.6.0
